[gd_scene load_steps=7 format=3 uid="uid://dr60br1tc4fxb"]

[ext_resource type="Script" uid="uid://dwxmwjwqxafq2" path="res://Scenes/play_area_free_four.gd" id="1_88uj3"]
[ext_resource type="PackedScene" uid="uid://catppxguc7kox" path="res://Objects/field.tscn" id="2_ny7wt"]
[ext_resource type="PackedScene" uid="uid://bmi2pr5jgtfxt" path="res://Objects/cannon.tscn" id="3_8uopx"]
[ext_resource type="PackedScene" uid="uid://dgea1jbl8u36" path="res://Objects/generator4.tscn" id="4_88uj3"]
[ext_resource type="Texture2D" uid="uid://ndch11btiigv" path="res://Resorces/Flag.webp" id="5_ny7wt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ybnwo"]
size = Vector2(1283, 30)

[node name="PlayAreaFreeFour" type="Node2D"]
script = ExtResource("1_88uj3")

[node name="Field" parent="." instance=ExtResource("2_ny7wt")]
position = Vector2(320, 26)

[node name="CannonBottomLeft" parent="." instance=ExtResource("3_8uopx")]
position = Vector2(357, 1013)
rotation = -0.785398
team = 2
arc_angle_deg = 360.0

[node name="CannonTopRight" parent="." instance=ExtResource("3_8uopx")]
position = Vector2(1564, 65)
rotation = 2.35619
team = 3

[node name="CannonTopLeft" parent="." instance=ExtResource("3_8uopx")]
position = Vector2(356, 65)
rotation = 0.785398

[node name="CannonBottomRight" parent="." instance=ExtResource("3_8uopx")]
position = Vector2(1564, 1014)
rotation = 3.92699
team = 1

[node name="Camera2D" type="Camera2D" parent="."]
physics_interpolation_mode = 2
position = Vector2(962, 539)

[node name="TopWall" type="StaticBody2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="TopWall"]
offset_left = 320.0
offset_right = 1601.0
offset_bottom = 30.0
color = Color(0.392157, 0.392157, 0.392157, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
position = Vector2(960.5, 15)
shape = SubResource("RectangleShape2D_ybnwo")

[node name="BottomWall" type="StaticBody2D" parent="."]
position = Vector2(0, 1050)

[node name="ColorRect" type="ColorRect" parent="BottomWall"]
offset_left = 320.0
offset_right = 1601.0
offset_bottom = 30.0
color = Color(0.392157, 0.392157, 0.392157, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWall"]
position = Vector2(960.5, 15)
shape = SubResource("RectangleShape2D_ybnwo")

[node name="Timer" type="Timer" parent="."]
wait_time = 180.0
autostart = true

[node name="GeneratorTopLeft" parent="." instance=ExtResource("4_88uj3")]

[node name="GeneratorBottomLeft" parent="." instance=ExtResource("4_88uj3")]
position = Vector2(0, 540)
team = 2

[node name="GeneratorTopRight" parent="." instance=ExtResource("4_88uj3")]
position = Vector2(1600, -1)
team = 3

[node name="GeneratorBottomRight" parent="." instance=ExtResource("4_88uj3")]
position = Vector2(1600, 539)
team = 1

[node name="ScreenFade" type="ColorRect" parent="."]
visible = false
offset_left = -17.0
offset_top = -5.0
offset_right = 1930.0
offset_bottom = 1089.0
color = Color(1, 1, 1, 0)

[node name="Label" type="Sprite2D" parent="."]
visible = false
position = Vector2(970, 540)
texture = ExtResource("5_ny7wt")

[node name="Like" type="Label" parent="."]
visible = false
offset_left = 3.0
offset_top = 946.0
offset_right = 1919.0
offset_bottom = 1083.0
theme_override_font_sizes/font_size = 100
text = "Like and Subscribe"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
